--- a/maintenance.html
+++ b/maintenance.html
@@ -30,7 +30,7 @@
 
 <body class="center">
 
-    <h1 class="page-title">Unavailable</h1>
+    <h1 class="page-title">Maintenance in Progress</h1>
   
 <img src="lego.jpg" alt="lego workmen">
   
