--- a/maintenance.html
+++ b/maintenance.html
@@ -4,7 +4,7 @@
   <meta name="theme-color" content="#002147">
   <meta name="robots" content="noindex,nofollow">
   <meta name="apple-itunes-app" content="app-id=480883488">
-  <title>Unavailable</title>
+  <title>Maintenance in Progress</title>
 
   <link rel="preload" href="https://du11hjcvx0uqb.cloudfront.net/dist/fonts/lato/extended/Lato-Regular-bd03a2cc27.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="https://du11hjcvx0uqb.cloudfront.net/dist/fonts/lato/extended/Lato-Bold-cccb897485.woff2" as="font" type="font/woff2" crossorigin="anonymous">
