--- a/maintenance.html
+++ b/maintenance.html
@@ -36,6 +36,18 @@
       -moz-osx-font-smoothing: grayscale;
     }
 
+    .screenreader-only, .screenreader-only-tool {
+      border: 0;
+      clip: rect(0 0 0 0);
+      height: 1px;
+      margin: -1px;
+      overflow: hidden;
+      padding: 0;
+      position: absolute;
+      width: 1px;
+      transform: translatez(0);
+   }
+
  </style>
   
 </head>
