--- a/talis.html
+++ b/talis.html
@@ -54,7 +54,7 @@
 
 <body class="center">
 
-  <h1 class="page-title">ORLO Has Moved<h1>
+  <h1 class="page-title">ORLO Has Moved</h1>
   
     <img src="lego.jpg" alt="lego workmen">
 
