--- a/talis.html
+++ b/talis.html
@@ -54,15 +54,31 @@
 
 <body class="center">
 
-  <h1 class="page-title">ORLO Has Moved</h1>
+  <h1 class="page-title">The Oxford Reading List Online (ORLO) page you're looking for has moved.</h1>
   
     <img src="lego.jpg" alt="lego workmen">
 
-    <p>The underlying platform used to deliver ORLO (Oxford Reading Lists Online) has moved. ORLO is now available via <a class="inline_disabled external" href="https://solo.bodleian.ox.ac.uk/" target="_blank" rel="noreferrer noopener"><span>SOLO</span><span class="external_link_icon" style="margin-inline-start: 5px; display: inline-block; text-indent: initial; " role="presentation">
+    <p>The underlying platform used to deliver ORLO (Oxford Reading Lists Online) has moved. ORLO is now available via the <a class="inline_disabled external" href="https://solo.bodleian.ox.ac.uk/" target="_blank" rel="noreferrer noopener"><span>SOLO</span><span class="external_link_icon" style="margin-inline-start: 5px; display: inline-block; text-indent: initial; " role="presentation"> 
     <svg viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg" style="width:1em; height:1em; vertical-align:middle; fill:currentColor">
       <path d="M1226.667 267c88.213 0 160 71.787 160 160v426.667H1280v-160H106.667v800C106.667 1523 130.56 1547 160 1547h1066.667c29.44 0 53.333-24 53.333-53.333v-213.334h106.667v213.334c0 88.213-71.787 160-160 160H160c-88.213 0-160-71.787-160-160V427c0-88.213 71.787-160 160-160Zm357.706 442.293 320 320c20.8 20.8 20.8 54.614 0 75.414l-320 320-75.413-75.414 228.907-228.906H906.613V1013.72h831.254L1508.96 784.707l75.413-75.414Zm-357.706-335.626H160c-29.44 0-53.333 24-53.333 53.333v160H1280V427c0-29.333-23.893-53.333-53.333-53.333Z" fill-rule="evenodd"></path>
     </svg>
     <span class="screenreader-only">Links to an external site.</span></span></a> website.</p>
+
+  <h2>Students</h2>
+  
+    <p>If you need assistance finding your reading list or a specific resource, please contact your tutor or course administrator.</p>
+
+  <h2>Academics and Course Administrators</h2>
+
+    <p>ORLO migrated away from Talis Aspire onto the Ex-Libris Leganto platform. Access to the old platform (Talis) ceased on 31st July.  If you need assistance setting up the link to the new platform, please contact orlo@bodleian.ox.ac.uk.</p>
+
+    <p>For detailed instructions on how to embed your list in Canvas, see <a class="inline_disabled external" href="https://libguides.bodleian.ox.ac.uk/ORLO/Canvas" target="_blank" rel="noreferrer noopener"><span>the guidance on LibGuides</span><span class="external_link_icon" style="margin-inline-start: 5px; display: inline-block; text-indent: initial; " role="presentation"> 
+    <svg viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg" style="width:1em; height:1em; vertical-align:middle; fill:currentColor">
+      <path d="M1226.667 267c88.213 0 160 71.787 160 160v426.667H1280v-160H106.667v800C106.667 1523 130.56 1547 160 1547h1066.667c29.44 0 53.333-24 53.333-53.333v-213.334h106.667v213.334c0 88.213-71.787 160-160 160H160c-88.213 0-160-71.787-160-160V427c0-88.213 71.787-160 160-160Zm357.706 442.293 320 320c20.8 20.8 20.8 54.614 0 75.414l-320 320-75.413-75.414 228.907-228.906H906.613V1013.72h831.254L1508.96 784.707l75.413-75.414Zm-357.706-335.626H160c-29.44 0-53.333 24-53.333 53.333v160H1280V427c0-29.333-23.893-53.333-53.333-53.333Z" fill-rule="evenodd"></path>
+    </svg>
+    <span class="screenreader-only">Links to an external site.</span></span></a> website.</p>.
+    </p>
+  
 <!--   
     <p>We apologise but this tool is currently off-line for maintenance. Further information should be available on the University's <a class="inline_disabled external" href="https://status.ox.ac.uk/" target="_blank" rel="noreferrer noopener"><span>Service Status</span><span class="external_link_icon" style="margin-inline-start: 5px; display: inline-block; text-indent: initial; " role="presentation">
     <svg viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg" style="width:1em; height:1em; vertical-align:middle; fill:currentColor">
