--- a/talis.html
+++ b/talis.html
@@ -52,7 +52,8 @@
   
 </head>
 
-<body class="center">
+<!--body class="center"-->
+  <body>
 
   <h1 class="page-title">The Oxford Reading List Online (ORLO) page you're looking for has moved.</h1>
   
