--- a/talis.html
+++ b/talis.html
@@ -52,8 +52,8 @@
   
 </head>
 
-<!--body class="center"-->
-  <body>
+<body class="center">
+ 
 
   <h1 class="page-title">The Oxford Reading List Online (ORLO) page you're looking for has moved.</h1>
   
@@ -65,13 +65,13 @@
     </svg>
     <span class="screenreader-only">Links to an external site.</span></span></a> website.</p>
 
-  <h2>Students</h2>
+  <!--h2>Students</h2-->
   
-    <p>If you need assistance finding your reading list or a specific resource, please contact your tutor or course administrator.</p>
+    <p><strong>Students:</strong> if you need assistance finding your reading list or a specific resource, please contact your tutor or course administrator.</p>
 
-  <h2>Academics and Course Administrators</h2>
+  <!--h2>Academics and Course Administrators</h2-->
 
-    <p>ORLO migrated away from Talis Aspire onto the Ex-Libris Leganto platform. Access to the old platform (Talis) ceased on 31st July.  If you need assistance setting up the link to the new platform, please contact <a href="mailto:orlo@bodleian.ox.ac.uk" target="_blank">orlo@bodleian.ox.ac.uk</a>.</p>
+    <p><strong>Academics and Course Administrators:</strong> ORLO migrated away from Talis Aspire onto the Ex-Libris Leganto platform. Access to the old platform (Talis) ceased on 31st July.  If you need assistance setting up the link to the new platform, please contact <a href="mailto:orlo@bodleian.ox.ac.uk" target="_blank">orlo@bodleian.ox.ac.uk</a>.</p>
 
     <p>For detailed instructions on how to embed your list in Canvas, see <a class="inline_disabled external" href="https://libguides.bodleian.ox.ac.uk/ORLO/Canvas" target="_blank" rel="noreferrer noopener"><span>the guidance on LibGuides</span><span class="external_link_icon" style="margin-inline-start: 5px; display: inline-block; text-indent: initial; " role="presentation"> 
     <svg viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg" style="width:1em; height:1em; vertical-align:middle; fill:currentColor">
