--- a/talis.html
+++ b/talis.html
@@ -57,7 +57,7 @@
 
   <h1 class="page-title">The Oxford Reading List Online (ORLO) page you're looking for has moved.</h1>
   
-    <img src="lego.jpg" alt="lego workmen">
+    <!--img src="lego.jpg" alt="lego workmen"-->
 
     <p>The underlying platform used to deliver ORLO (Oxford Reading Lists Online) has moved. ORLO is now available via the <a class="inline_disabled external" href="https://solo.bodleian.ox.ac.uk/" target="_blank" rel="noreferrer noopener"><span>SOLO</span><span class="external_link_icon" style="margin-inline-start: 5px; display: inline-block; text-indent: initial; " role="presentation"> 
     <svg viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg" style="width:1em; height:1em; vertical-align:middle; fill:currentColor">
@@ -65,11 +65,11 @@
     </svg>
     <span class="screenreader-only">Links to an external site.</span></span></a> website.</p>
 
-  <!--h2>Students</h2-->
+
   
     <p><strong><big>Students:</big></strong> if you need assistance finding your reading list or a specific resource, please contact your tutor or course administrator.</p>
 
-  <!--h2>Academics and Course Administrators</h2-->
+
 
     <p><strong><big>Academics and Course Administrators:</big></strong> ORLO migrated away from Talis Aspire onto the Ex-Libris Leganto platform. Access to the old platform (Talis) ceased on 31st July.  If you need assistance setting up the link to the new platform, please contact <a href="mailto:orlo@bodleian.ox.ac.uk" target="_blank">orlo@bodleian.ox.ac.uk</a>.</p>
 
@@ -80,15 +80,8 @@
     <span class="screenreader-only">Links to an external site.</span></span></a> website.</p>
     </p>
   
-<!--   
-    <p>We apologise but this tool is currently off-line for maintenance. Further information should be available on the University's <a class="inline_disabled external" href="https://status.ox.ac.uk/" target="_blank" rel="noreferrer noopener"><span>Service Status</span><span class="external_link_icon" style="margin-inline-start: 5px; display: inline-block; text-indent: initial; " role="presentation">
-    <svg viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg" style="width:1em; height:1em; vertical-align:middle; fill:currentColor">
-      <path d="M1226.667 267c88.213 0 160 71.787 160 160v426.667H1280v-160H106.667v800C106.667 1523 130.56 1547 160 1547h1066.667c29.44 0 53.333-24 53.333-53.333v-213.334h106.667v213.334c0 88.213-71.787 160-160 160H160c-88.213 0-160-71.787-160-160V427c0-88.213 71.787-160 160-160Zm357.706 442.293 320 320c20.8 20.8 20.8 54.614 0 75.414l-320 320-75.413-75.414 228.907-228.906H906.613V1013.72h831.254L1508.96 784.707l75.413-75.414Zm-357.706-335.626H160c-29.44 0-53.333 24-53.333 53.333v160H1280V427c0-29.333-23.893-53.333-53.333-53.333Z" fill-rule="evenodd"></path>
-    </svg>
-    <span class="screenreader-only">Links to an external site.</span></span></a> website.</p>
-  -->
-    <div class="attrib">
+    <!--div class="attrib">
       <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/26782864@N00/11682625885">Hard Drive Repair</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/26782864@N00">wwarby</a> is licensed under <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/licenses/by/2.0/?ref=openverse">CC BY 2.0 <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>.</p>
-    </div>
+</div-->
 </body>
 </html>
