--- a/talis.html
+++ b/talis.html
@@ -57,7 +57,7 @@
 
   <h1 class="page-title">The Oxford Reading List Online (ORLO) page you're looking for has moved.</h1>
   
-    <!--img src="lego.jpg" alt="lego workmen"-->
+    <img src=" ORLO-logo.jpg" alt="ORLO Logo">
 
     <p>The underlying platform used to deliver ORLO (Oxford Reading Lists Online) has moved. ORLO is now available via the <a class="inline_disabled external" href="https://solo.bodleian.ox.ac.uk/" target="_blank" rel="noreferrer noopener"><span>SOLO</span><span class="external_link_icon" style="margin-inline-start: 5px; display: inline-block; text-indent: initial; " role="presentation"> 
     <svg viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg" style="width:1em; height:1em; vertical-align:middle; fill:currentColor">
