--- a/talis.html
+++ b/talis.html
@@ -71,7 +71,7 @@
 
 
 
-    <p><strong><big>Academics and Course Administrators:</big></strong> ORLO has migrated away from Talis Aspire onto the Ex-Libris Leganto platform. If you need assistance setting up reading lists in the new platform, please contact <a href="mailto:orlo@bodleian.ox.ac.uk" target="_blank">orlo@bodleian.ox.ac.uk</a>.</p>
+    <p><strong><big>Academics and Course Administrators:</big></strong> ORLO has migrated away from Talis Aspire onto the Ex-Libris Leganto platform. If you need assistance setting up reading lists on the new platform, please contact <a href="mailto:orlo@bodleian.ox.ac.uk" target="_blank">orlo@bodleian.ox.ac.uk</a>.</p>
 
     <p>For detailed instructions on how to embed your list in Canvas, see <a class="inline_disabled external" href="https://libguides.bodleian.ox.ac.uk/ORLO/Canvas" target="_blank" rel="noreferrer noopener"><span>the guidance on LibGuides</span><span class="external_link_icon" style="margin-inline-start: 5px; display: inline-block; text-indent: initial; " role="presentation"> 
     <svg viewBox="0 0 1920 1920" xmlns="http://www.w3.org/2000/svg" style="width:1em; height:1em; vertical-align:middle; fill:currentColor">
